@@ -1,6 +1,7 @@
 ﻿Version 2.0
 - Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
 - Implement growables
+- Add button to access RICO settings for from building info panels
 - Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
 - Allow 'none' as valid UI catgegory, and explicitly default to that if no valid UI category can be found or guessed
 - Remove error for zero workplaces for dummy service
